<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/virama">
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/standardKrus"
            android:entries="@array/viramas"
            android:entryValues="@array/viramas"
            android:key="virama_1"
            android:title="@string/virama1" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/pamudpod"
            android:entries="@array/viramas"
            android:entryValues="@array/viramas"
            android:key="virama_2"
            android:title="@string/virama2" />
        <ListPreference
            android:defaultValue="@string/malakingKrus"
            android:entries="@array/viramas"
            android:entryValues="@array/viramas"
            android:key="virama_3"
            android:title="@string/virama3" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>